  141 Luca Falavigna	2009-09-02
      Update e-mail address

  140 Luca Falavigna	2009-06-22
      Adjust Makefile to install files to correct locations

  139 Luca Falavigna	2009-06-14
      Merge configfiles directory under etc

  138 Luca Falavigna	2009-06-14
      Exit properly when a KeyboardInterrupt
      exception is raised with --nodaemon

  137 Luca Falavigna	2009-06-14
      More pyinotify 0.8.6 optimization
      Support for older versions removed

  136 Luca Falavigna	2009-06-04
      Add init.d script disclaimer

  135 Luca Falavigna	2009-06-03
      Add init.d script and related files  

  134 Luca Falavigna	2009-05-30
      Replace obsolete sha module with hashlib one

  133 Luca Falavigna	2009-05-25
      Adjust Makefile to match latest modifications

  132 Luca Falavigna	2009-05-25
      Install Contents module

  131 Luca Falavigna	2009-05-25
      Add every supported releases for both Debian and Ubuntu

  130 Luca Falavigna	2009-05-25
      Do not pass --distribution option to pbuilder,
      configfile has all the necessary bits

  129 Luca Falavigna	2009-05-25
      Redirect stdin pbuilder output to /dev/null

  128 Luca Falavigna	2009-05-21
      Pass -E --pedantic options to lintian

  127 Luca Falavigna	2009-05-16
      Add compatibility with pyinotify 0.8.6

  126 Luca Falavigna	2009-04-18
      Improve Contents module code

  125 Luca Falavigna	2009-03-11
      Add Contents module

  124 Luca Falavigna	2009-03-02
      Built packages are now stored in "pool" directory

  123 Luca Falavigna	2009-03-02
      Exit if another instance is already running

  122 Luca Falavigna	2009-02-09
      Use standard man pages, no longer use docbook templates



Tue 2009-01-27 20:36:31 +0100
Stable release: 0.6

  121 Luca Falavigna	2009-01-27
      DateStamp.py module: remove unneeded dot in date string

  120 Luca Falavigna	2009-01-27
      Provide Jaunty configuration file, remove Intrepid one

  119 Luca Falavigna	2009-01-26