@@ -1,3 +1,6 @@
+  142 Luca Falavigna	2009-09-02
+      Let distutils install files
+
   141 Luca Falavigna	2009-09-02
       Update e-mail address
 
